changes to notebooks for tile processing

--- a/Arisa - Creating Tiles.ipynb
+++ b/Arisa - Creating Tiles.ipynb
@@ -1,110 +1,155 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d1174f52",
+   "metadata": {},
+   "source": [
+    "Importing necessary packages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "id": "356025b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import requests\n",
-    "import json\n",
-    "#from scipy import stats as st"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0a5d893f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "\n",
-    "class MakeApiCall:\n",
-    "\n",
-    "    def get_data(self, api):\n",
-    "        response = requests.get(f\"{api}\")\n",
-    "        if response.status_code == 200:\n",
-    "            print(\"sucessfully fetched the data\")\n",
-    "            self.formatted_print(response.json())\n",
-    "        else:\n",
-    "            print(\n",
-    "                f\"Hello person, there's a {response.status_code} error with your request\")\n",
-    "\n",
-    "    def get_user_data(self, api, parameters):\n",
-    "        response = requests.get(f\"{api}\", headers=parameters)\n",
-    "        if response.status_code == 200:\n",
-    "            print(\"sucessfully fetched the data with parameters provided\")\n",
-    "            self.formatted_print(response.json())\n",
-    "        else:\n",
-    "            print(\n",
-    "                f\"Hello person, there's a {response.status_code} error with your request\")\n",
-    "\n",
-    "    def formatted_print(self, obj):\n",
-    "        text = json.dumps(obj, sort_keys=True, indent=4)\n",
-    "        print(text)\n",
-    "\n",
-    "    def __init__(self, api):\n",
-    "         self.get_data(api)\n",
-    "\n",
-    "        #parameters = {\n",
-    "            #'Authorization': 'access_token myToken'\n",
-    "        #}\n",
-    "        #self.get_user_data(api, parameters)\n"
+    "from mpl_toolkits.basemap import Basemap\n",
+    "import math\n",
+    "import geopy.distance"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c4aa18d",
+   "id": "6a041d23",
    "metadata": {},
    "source": [
-    "Separate SF into tiles w/ lat and long look ups"
+    "Calculating spacing to create tiles in QGIS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d5f9b933",
+   "execution_count": 72,
+   "id": "e0b5e3bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0011401159420358908\n",
+      "-0.0009036052631543612\n"
+     ]
+    }
+   ],
    "source": [
-    "# SF is about ~15 km x 15 km\n",
-    "# The paper used 2 km x 2 km tiles\n",
-    "# Let's use 100 m x 100 m tile \n",
+    "# Boundaries of SF: 37.708251, 37.811262, -122.514446, -122.357110\n",
     "\n",
-    "import geopy.distance\n",
-    "import math\n",
-    "\n",
-    "#longest vertical distance\n",
+    "# vertical distance\n",
     "coords_1 = (37.811262, -122.477010)\n",
     "coords_2 = (37.708251, -122.477010)\n",
     "\n",
     "vertical_dist = geopy.distance.geodesic(coords_1, coords_2).m\n",
-    "v_count = math.ceil(vertical_dist / 100)\n",
+    "v_count = math.ceil(vertical_dist / 100) # we want each tiles to be about 100 m x 100 m\n",
     "\n",
-    "#longest horizontal distance \n",
+    "# horizontal distance \n",
     "coords_1 = (37.778946, -122.514446)\n",
     "coords_2 = (37.778946, -122.357110)\n",
     "\n",
     "horizontal_dist = geopy.distance.geodesic(coords_1, coords_2).m\n",
-    "h_count = math.ceil(horizontal_dist / 100)"
+    "h_count = math.ceil(horizontal_dist / 100) # we want each tiles to be about 100 m x 100 m\n",
+    "\n",
+    "#  calculating intervals\n",
+    "\n",
+    "long_interval = np.linspace(-122.357110, -122.514446, h_count)\n",
+    "lat_interval = np.linspace(37.708251, 37.811262, v_count)\n",
+    "\n",
+    "print(long_interval[0] - long_interval[1])\n",
+    "print(lat_interval[0] - lat_interval[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4597d70",
+   "metadata": {},
+   "source": [
+    "Importing QGIS created tiles with coordinates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
+   "id": "bef167a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiles = pd.read_csv(r'.\\Data\\QGIS_Grid.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f2c86e",
+   "metadata": {},
+   "source": [
+    "Gathering list of tiles w/ road vector data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "da3badbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_tiles = pd.read_csv(r'.\\Data\\QGIS_Intersection.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "eec28774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_tiles = pd.DataFrame(road_tiles['id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "247e13cf",
+   "metadata": {},
+   "source": [
+    "Filter out unnecessary tiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "f88299e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping tiles without road data\n",
+    "\n",
+    "tiles = pd.concat([tiles.set_index('id'), road_tiles.set_index(0)], axis=1, join=\"inner\").reset_index()\n",
+    "\n",
+    "tiles = tiles.rename(columns={\"index\": \"id\"})\n",
+    "\n",
+    "tiles = tiles.drop(columns=['wkt_geom'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "id": "03193061",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to create midpoint\n",
     "# https://code.activestate.com/recipes/577713-midpoint-of-two-gps-points/ \n",
-    "\n",
-    "import math\n",
     "\n",
     "def midpoint(x1, y1, x2, y2):\n",
     "#Input values as degrees\n",
@@ -128,110 +173,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "60039448",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 135,
+   "id": "a494256d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating midpoints for each tile \n",
+    "# Excluding tile if beyond SF boundaries on midpoint \n",
+    "\n",
+    "to_keep = pd.DataFrame(columns = ['id', 'Mid_lat', 'Mid_long'])\n",
+    "\n",
+    "#bm = Basemap(projection='cyl', resolution='f') \n",
+    "\n",
+    "for i in range(len(tiles)):\n",
+    "    t = tiles.iloc[i]\n",
+    "    lat1 = t['top']\n",
+    "    lat2 = t['bottom']\n",
+    "    long1 = t['left']\n",
+    "    long2 = t['right']\n",
+    "    id = t['id']\n",
+    "    mid = midpoint(lat1, lat2, long1, long2)\n",
+    "    ypt,xpt = bm(mid[1], mid[0]) # converting to projection coordinates, enter parameters as long, lat \n",
+    "    if mid[0] < 37.708251 or mid[0] > 37.811262 or mid[1] < -122.514446 or mid[1] > -122.357110: \n",
+    "        continue # out of SF boundaries\n",
+    "    #elif bm.is_land(ypt,xpt) == False:\n",
+    "        #continue # not on land # shouldn't need because only include tiles with roads\n",
+    "    tk = pd.DataFrame([[id, mid[0], mid[1]]], columns = ['id', 'Mid_lat', 'Mid_long'])\n",
+    "    to_keep = pd.concat([to_keep, tk], ignore_index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "bd896c05",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n"
+      "C:\\Users\\arisa\\Anaconda3\\FIle\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6982: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
+      "  return Index(sequences[0], name=names)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# If midpoint of tile is in the ocean, exclude\n",
-    "# https://gis.stackexchange.com/questions/235133/checking-if-a-geocoordinate-point-is-land-or-ocean\n",
-    "\n",
-    "from mpl_toolkits.basemap import Basemap\n",
-    "bm = Basemap()   # default: projection='cyl'\n",
-    "print (Basemap().is_land(99.675, 13.104))  #True\n",
-    "print (Basemap().is_land(100.539, 13.104))  #False\n",
-    "lon, lat = (11.61168822665539, 57.86868795294363) # test coords\n",
-    "xpt, ypt = bm( 11.61168822665539, 57.86868795294363 ) # convert to projection map\n",
-    "value = bm.is_land(xpt, ypt) # test is_land\n",
-    "value"
+    "tiles = pd.concat([tiles.set_index('id'), to_keep.set_index('id')], axis=1, join=\"inner\").reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2843bc25",
+   "execution_count": 137,
+   "id": "ad294b4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bm = Basemap(projection='cyl', resolution='f')   # default: projection='cyl'"
+    "tiles = tiles.rename(columns={\"id\": \"Tile_ID\", \"left\": \"Long2\", \"right\": \"Long1\", \"top\": \"Lat2\", \"bottom\": \"Lat1\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "970fe310",
+   "execution_count": 138,
+   "id": "ad318071",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make a dataframe with:\n",
-    "# Tile #\n",
-    "# Upper left coordinate\n",
-    "# Upper right\n",
-    "# Lower left\n",
-    "# lower right \n",
-    "# midpoint \n",
-    "\n",
-    "long_interval = np.linspace(-122.357110, -122.514446, h_count)\n",
-    "\n",
-    "lat_interval = np.linspace(37.708251, 37.811262, v_count)\n",
-    "\n",
-    "tiles = pd.DataFrame(columns = ['Tile_ID', 'Lat1', 'Lat2', 'Long1', 'Long2', 'Mid_lat', 'Mid_long'])\n",
-    "\n",
-    "count1 = 0\n",
-    "\n",
-    "bm = Basemap(projection='cyl', resolution='f') \n",
-    "\n",
-    "for lai in range(len(lat_interval) - 1): \n",
-    "    lat1 = lat_interval[lai]\n",
-    "    lat2 = lat_interval[lai + 1]\n",
-    "    for loi in range(len(long_interval) - 1):\n",
-    "        long1 = long_interval[loi]\n",
-    "        long2 = long_interval[loi + 1]\n",
-    "        mid = midpoint(lat1, lat2, long1, long2)\n",
-    "        ypt,xpt = bm(mid[1], mid[0]) #converting to projection coordinates, enter parameters as long, lat \n",
-    "        if bm.is_land(ypt,xpt) == False:\n",
-    "            #print(mid[0], mid[1])\n",
-    "            continue\n",
-    "        #print(\"added\", lai, loi)\n",
-    "        t = pd.DataFrame([[count1, lat1, lat2, long1, long2, mid[0], mid[1]]], columns = ['Tile_ID', 'Lat1', 'Lat2', 'Long1', 'Long2', 'Mid_lat', 'Mid_long'])\n",
-    "        tiles = pd.concat([tiles, t], ignore_index = True)\n",
-    "        count1 += 1\n"
+    "tiles['Tile_ID'] = tiles['Tile_ID'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43fcc93b",
+   "metadata": {},
+   "source": [
+    "Exporting to CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 139,
    "id": "90e8a22e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiles.to_csv('.\\Data\\Tiles.csv')"
+    "tiles.to_csv('.\\Data\\Tiles.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 140,
    "id": "47f24157",
    "metadata": {},
    "outputs": [],
@@ -241,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 141,
    "id": "f4e45965",
    "metadata": {},
    "outputs": [
@@ -266,12 +296,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Tile_ID</th>\n",
-       "      <th>Lat1</th>\n",
+       "      <th>Long2</th>\n",
        "      <th>Lat2</th>\n",
        "      <th>Long1</th>\n",
-       "      <th>Long2</th>\n",
+       "      <th>Lat1</th>\n",
        "      <th>Mid_lat</th>\n",
        "      <th>Mid_long</th>\n",
        "    </tr>\n",
@@ -279,80 +308,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37.708251</td>\n",
-       "      <td>37.709155</td>\n",
-       "      <td>-122.391313</td>\n",
-       "      <td>-122.392454</td>\n",
-       "      <td>37.708703</td>\n",
-       "      <td>-122.391884</td>\n",
+       "      <td>36</td>\n",
+       "      <td>-122.514446</td>\n",
+       "      <td>37.779636</td>\n",
+       "      <td>-122.513306</td>\n",
+       "      <td>37.778732</td>\n",
+       "      <td>37.779184</td>\n",
+       "      <td>-122.513876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>37.708251</td>\n",
-       "      <td>37.709155</td>\n",
-       "      <td>-122.392454</td>\n",
-       "      <td>-122.393594</td>\n",
-       "      <td>37.708703</td>\n",
-       "      <td>-122.393024</td>\n",
+       "      <td>37</td>\n",
+       "      <td>-122.514446</td>\n",
+       "      <td>37.778732</td>\n",
+       "      <td>-122.513306</td>\n",
+       "      <td>37.777829</td>\n",
+       "      <td>37.778280</td>\n",
+       "      <td>-122.513876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>37.708251</td>\n",
-       "      <td>37.709155</td>\n",
-       "      <td>-122.393594</td>\n",
-       "      <td>-122.394734</td>\n",
-       "      <td>37.708703</td>\n",
-       "      <td>-122.394164</td>\n",
+       "      <td>151</td>\n",
+       "      <td>-122.513306</td>\n",
+       "      <td>37.779636</td>\n",
+       "      <td>-122.512166</td>\n",
+       "      <td>37.778732</td>\n",
+       "      <td>37.779184</td>\n",
+       "      <td>-122.512736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>37.708251</td>\n",
-       "      <td>37.709155</td>\n",
-       "      <td>-122.394734</td>\n",
-       "      <td>-122.395874</td>\n",
-       "      <td>37.708703</td>\n",
-       "      <td>-122.395304</td>\n",
+       "      <td>152</td>\n",
+       "      <td>-122.513306</td>\n",
+       "      <td>37.778732</td>\n",
+       "      <td>-122.512166</td>\n",
+       "      <td>37.777829</td>\n",
+       "      <td>37.778280</td>\n",
+       "      <td>-122.512736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>37.708251</td>\n",
-       "      <td>37.709155</td>\n",
-       "      <td>-122.395874</td>\n",
-       "      <td>-122.397014</td>\n",
-       "      <td>37.708703</td>\n",
-       "      <td>-122.396444</td>\n",
+       "      <td>153</td>\n",
+       "      <td>-122.513306</td>\n",
+       "      <td>37.777829</td>\n",
+       "      <td>-122.512166</td>\n",
+       "      <td>37.776925</td>\n",
+       "      <td>37.777377</td>\n",
+       "      <td>-122.512736</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  Tile_ID       Lat1       Lat2       Long1       Long2  \\\n",
-       "0           0        0  37.708251  37.709155 -122.391313 -122.392454   \n",
-       "1           1        1  37.708251  37.709155 -122.392454 -122.393594   \n",
-       "2           2        2  37.708251  37.709155 -122.393594 -122.394734   \n",
-       "3           3        3  37.708251  37.709155 -122.394734 -122.395874   \n",
-       "4           4        4  37.708251  37.709155 -122.395874 -122.397014   \n",
+       "   Tile_ID       Long2       Lat2       Long1       Lat1    Mid_lat  \\\n",
+       "0       36 -122.514446  37.779636 -122.513306  37.778732  37.779184   \n",
+       "1       37 -122.514446  37.778732 -122.513306  37.777829  37.778280   \n",
+       "2      151 -122.513306  37.779636 -122.512166  37.778732  37.779184   \n",
+       "3      152 -122.513306  37.778732 -122.512166  37.777829  37.778280   \n",
+       "4      153 -122.513306  37.777829 -122.512166  37.776925  37.777377   \n",
        "\n",
-       "     Mid_lat    Mid_long  \n",
-       "0  37.708703 -122.391884  \n",
-       "1  37.708703 -122.393024  \n",
-       "2  37.708703 -122.394164  \n",
-       "3  37.708703 -122.395304  \n",
-       "4  37.708703 -122.396444  "
+       "     Mid_long  \n",
+       "0 -122.513876  \n",
+       "1 -122.513876  \n",
+       "2 -122.512736  \n",
+       "3 -122.512736  \n",
+       "4 -122.512736  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,24 +387,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ed380017",
+   "execution_count": null,
+   "id": "fcb6e021",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12227"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(tiles_2)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
