Updates to balanced datasets

--- a/Arisa - Sampling_v2.ipynb
+++ b/Arisa - Sampling_v2.ipynb
@@ -2,26 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "356025b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-10 07:04:41.139946: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-10 07:04:41.274542: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-10 07:04:41.274595: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-10 07:04:42.036186: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-10 07:04:42.036275: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-10 07:04:42.036287: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -37,6 +23,7 @@
     "import tifffile\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
     "\n",
     "import os\n",
     "\n",
@@ -45,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f3693092",
    "metadata": {
     "tags": []
@@ -58,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c713d7a6",
    "metadata": {
     "tags": []
@@ -214,7 +201,7 @@
        "4                0.0                    0.0     M  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "575b4831-2a18-46e7-b50a-0fd0716393a4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tiles = pd.get_dummies(tiles, columns = ['RTTYP'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "1e942aa3",
    "metadata": {},
    "outputs": [
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "a432e6b9-3f4e-40c8-bd71-31d8fd5d31b7",
    "metadata": {
     "tags": []
@@ -273,7 +272,7 @@
        "1060"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "ca7614df",
    "metadata": {},
    "outputs": [],
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "3c0cde85",
    "metadata": {},
    "outputs": [
@@ -338,7 +337,11 @@
        "      <th>Bus_stop</th>\n",
        "      <th>Collisions_Future</th>\n",
        "      <th>Collisions_Historical</th>\n",
-       "      <th>RTTYP</th>\n",
+       "      <th>RTTYP_I</th>\n",
+       "      <th>RTTYP_M</th>\n",
+       "      <th>RTTYP_O</th>\n",
+       "      <th>RTTYP_S</th>\n",
+       "      <th>RTTYP_U</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -357,7 +360,11 @@
        "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -374,7 +381,11 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -391,7 +402,11 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -408,7 +423,11 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -425,7 +444,11 @@
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -446,15 +469,22 @@
        "30 -122.510456         0.0                0.0            0.0       1.0   \n",
        "31 -122.510456         0.0                0.0            0.0       0.0   \n",
        "\n",
-       "    Collisions_Future  Collisions_Historical RTTYP  \n",
-       "10                5.0                    5.0     M  \n",
-       "14                1.0                    3.0     M  \n",
-       "18                1.0                    0.0     M  \n",
-       "30                1.0                    1.0     M  \n",
-       "31                2.0                    4.0     M  "
+       "    Collisions_Future  Collisions_Historical  RTTYP_I  RTTYP_M  RTTYP_O  \\\n",
+       "10                5.0                    5.0        0        1        0   \n",
+       "14                1.0                    3.0        0        1        0   \n",
+       "18                1.0                    0.0        0        1        0   \n",
+       "30                1.0                    1.0        0        1        0   \n",
+       "31                2.0                    4.0        0        1        0   \n",
+       "\n",
+       "    RTTYP_S  RTTYP_U  \n",
+       "10        0        0  \n",
+       "14        0        0  \n",
+       "18        0        0  \n",
+       "30        0        0  \n",
+       "31        0        0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "73a628a9",
    "metadata": {},
    "outputs": [
@@ -475,7 +505,7 @@
        "3241"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "04bcb273",
    "metadata": {},
    "outputs": [
@@ -514,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "0d50fdd4",
    "metadata": {},
    "outputs": [],
@@ -534,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "81a7f54d-b827-4e70-b910-9ff6e434045d",
    "metadata": {
     "tags": []
@@ -574,7 +604,11 @@
        "      <th>Bus_stop</th>\n",
        "      <th>Collisions_Future</th>\n",
        "      <th>Collisions_Historical</th>\n",
-       "      <th>RTTYP</th>\n",
+       "      <th>RTTYP_I</th>\n",
+       "      <th>RTTYP_M</th>\n",
+       "      <th>RTTYP_O</th>\n",
+       "      <th>RTTYP_S</th>\n",
+       "      <th>RTTYP_U</th>\n",
        "      <th>bin</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -594,8 +628,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -612,8 +650,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -630,8 +672,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -648,8 +694,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -666,8 +716,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -688,15 +742,22 @@
        "3 -122.512736         0.0                0.0            0.0       0.0   \n",
        "4 -122.512736         0.0                0.0            0.0       0.0   \n",
        "\n",
-       "   Collisions_Future  Collisions_Historical RTTYP bin  \n",
-       "0                0.0                    0.0     M   A  \n",
-       "1                0.0                    0.0     M   A  \n",
-       "2                0.0                    0.0     M   A  \n",
-       "3                0.0                    0.0     M   A  \n",
-       "4                0.0                    0.0     M   A  "
+       "   Collisions_Future  Collisions_Historical  RTTYP_I  RTTYP_M  RTTYP_O  \\\n",
+       "0                0.0                    0.0        0        1        0   \n",
+       "1                0.0                    0.0        0        1        0   \n",
+       "2                0.0                    0.0        0        1        0   \n",
+       "3                0.0                    0.0        0        1        0   \n",
+       "4                0.0                    0.0        0        1        0   \n",
+       "\n",
+       "   RTTYP_S  RTTYP_U  bin  \n",
+       "0        0        0    1  \n",
+       "1        0        0    1  \n",
+       "2        0        0    1  \n",
+       "3        0        0    1  \n",
+       "4        0        0    1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,29 +766,29 @@
     "bin = []\n",
     "for i in tiles['Collisions_Future']:\n",
     "    if i == 0: \n",
-    "        b = 'A'\n",
+    "        b = 1\n",
     "    elif (i == 1) or (i == 2):\n",
-    "        b = 'B'\n",
+    "        b = 2\n",
     "    elif (i == 3) or (i == 4):\n",
-    "        b = 'C'\n",
+    "        b = 3\n",
     "    elif (i == 5) or (i == 6):\n",
-    "        b = 'D'\n",
+    "        b = 4\n",
     "    elif (i == 7) or (i == 8):\n",
-    "        b = 'E'\n",
+    "        b = 5\n",
     "    elif (i == 9) or (i == 10):\n",
-    "        b = 'F'\n",
+    "        b = 6\n",
     "    elif (i == 11) or (i == 12):\n",
-    "        b = 'G'\n",
+    "        b = 7\n",
     "    elif (i == 13) or (i == 14):\n",
-    "        b = 'H'\n",
+    "        b = 8\n",
     "    elif (i == 15) or (i == 16):\n",
-    "        b = 'I'\n",
+    "        b = 9\n",
     "    elif (i == 17) or (i == 18):\n",
-    "        b = 'J'\n",
+    "        b = 10\n",
     "    elif (i == 19) or (i == 20):\n",
-    "        b = 'K'\n",
+    "        b = 11\n",
     "    else: \n",
-    "        b = 'Other'\n",
+    "        b = 12\n",
     "    bin.append(b)\n",
     "    \n",
     "tiles2 = tiles\n",
@@ -739,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "4ae63947-d349-4da1-842b-25ebbd61560e",
    "metadata": {
     "tags": []
